2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Profiling.addin.xml: Bumped MD version.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* ProfilingContext.cs:
	* ProfilingService.cs:
	* AbstractProfiler.cs:
	* gtk-gui/generated.cs:
	* ProfilingOperations.cs:
	* Commands/PadCommands.cs:
	* Commands/ToolCommands.cs:
	* MonoDevelop.Profiling.mdp:
	* Commands/ProjectCommands.cs:
	* Dialogs/SelectProcessDialog.cs:
	* MonoDevelop.Profiling.addin.xml:
	* Commands/AbstractProfilerList.cs:
	* gtk-gui/MonoDevelop.Profiling.SelectProcessDialog.cs:
	* gtk-gui/MonoDevelop.Profiling.SelectExecutableDialog.cs:
	  Merged MD.Projects into MD.Core, and MD.Projects.Gui,
	  MD.Core.Gui and MD.Components into MD.Ide.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Profiling.addin.xml: Bump MD version.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Profiling.addin.xml: Bump MD version.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Profiling.mdp: Flush.

2009-04-20  Lluis Sanchez Gual  <lluis@novell.com>

	* AbstractProfiler.cs:
	* ProfilingOperations.cs:
	* MonoProfilerExecutionHandler.cs:
	* ProcessProfilerExecutionHandler.cs: Track api changes done
	  in IExecutionHandler.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Profiling.addin.xml: Bump MD version.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* IProfiler.cs:
	* AbstractProfiler.cs:
	* ProfilingOperations.cs: Changed the way execution handlers
	  work. We are not using platform ids anymore. Instead, we use
	  command strings when looking for execution handlers.
	  IExecutionHandlerFactory has been removed and now everything
	  is handled by IExecutionHandler, which has a new CanExecute
	  method. This model is more simple and more generic.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * AssemblyInfo.cs:
 * MonoDevelop.Profiling.addin.xml: Bump MD version.
