@@ -1,3 +1,7 @@
+2010-04-28  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* DummyProcessAsyncOperation.cs: Track api changes.
+
 2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Profiling.addin.xml: Bumped MD version.
